--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.2",
+    "@angular/cdk": "^10.1.2",
     "@angular/cli": "^10.0.5",
     "@angular/common": "~10.0.2",
     "@angular/compiler": "~10.0.2",
     "@angular/compiler-cli": "^10.0.7",
     "@angular/core": "~10.0.2",
     "@angular/forms": "~10.0.2",
+    "@angular/material": "^10.1.2",
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
