--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-todo",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "build-locale",
+    "heroku-postbuild": "ng build --prod && build-locale",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
