--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "app-todo",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "ng build --prod && npm run build-locale",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
@@ -12,6 +11,8 @@
     "build-locale:en": "ng build --prod --i18n-locale en --i18n-format xlf --i18n-file src/locale/messages.en.xlf --output-path=dist/en --baseHref /en/",
     "build-locale:vi": "ng build --prod --i18n-locale vi --i18n-format xlf --i18n-file src/locale/messages.vi.xlf --output-path=dist/vi --baseHref /vi/",
     "build-locale": "npm run build-locale:en && npm run build-locale:vi",
+    "heroku-postbuild": "ng build --prod && npm run build-locale",
+    "build-multi-language": "ng build --prod && npm run build-locale",
     "int:extract": "ng xi18n --output-path src/locale"
   },
   "private": true,
