--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler": "~10.0.2",
     "@angular/compiler-cli": "^10.0.7",
     "@angular/core": "~10.0.2",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.2",
     "@angular/localize": "^10.0.8",
     "@angular/material": "^10.1.2",
@@ -36,6 +37,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "express": "^4.17.1",
+    "firebase": "^7.18.0",
     "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
